--- a/TheLastTime/wwwroot/index.html
+++ b/TheLastTime/wwwroot/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">Applikation wird geladen...</div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
